bumping to 4.12
new build.gradle files

new build.gradle for adhara

clean up of interop-service commits

clean up of atomic swap commits

updated to latest web3j version

set correct corda version

updated quasar version + MerkleTree revert

test clean up

code clean up

Signed-off-by: Ignace Loomans <50031945+ILoomans@users.noreply.github.com>