@@ -47,20 +47,71 @@ configurations {
 }
 
 dependencies {
-    testCompile "junit:junit:$junit_version"
 
     // Corda dependencies.
-    cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
-    cordaRuntime "$corda_release_group:corda:$corda_release_version"
-    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
-    cordaCompile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
-
+    cordaProvided "$corda_core_release_group:corda-core:$corda_core_release_version"
+    cordaProvided "$corda_release_group:corda:$corda_release_version"
 
     // CorDapp dependencies.
     cordapp project(":contracts")
+
+    // Integration Test Dependencies
+    integrationTestImplementation "$corda_core_release_group:corda-core:$corda_core_release_version"
+    integrationTestImplementation group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+    integrationTestImplementation "$corda_core_release_group:corda-core-test-utils:$corda_core_release_version"
+    integrationTestImplementation "$corda_core_release_group:corda-test-utils:$corda_core_release_version"
+    integrationTestImplementation "junit:junit:$junit_version"
+    integrationTestImplementation "$corda_release_group:corda-node-driver:$corda_release_version"
+
+
 }
 
 task integrationTest(type: Test, dependsOn: []) {
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+            '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED',
+            '--add-opens', 'java.sql/java.sql=ALL-UNNAMED'
 }
+
+
+quasar {
+    excludePackages.addAll(
+            "antlr**",
+            "com.codahale**",
+            "com.fasterxml.**",
+            "com.github.benmanes.caffeine.**",
+            "com.google.**",
+            "com.lmax.**",
+            "com.zaxxer.**",
+            "net.bytebuddy**",
+            "io.github.classgraph**",
+            "io.netty*",
+            "liquibase**",
+            "net.i2p.crypto.**",
+            "nonapi.io.github.classgraph.**",
+            "org.apiguardian.**",
+            "org.bouncycastle**",
+            "org.web3j**",
+            "org.codehaus.**",
+            "org.h2**",
+            "org.hibernate**",
+            "org.jboss.**",
+            "org.objenesis**",
+            "org.w3c.**",
+            "org.xml**",
+            "org.yaml**",
+            "rx**",
+            "kotlin**"
+    )
+}
+
