@@ -7,7 +7,7 @@ buildscript {
 
     ext {
         corda_release_group = constants.getProperty("cordaReleaseGroup")
-        corda_core_release_group =  constants.getProperty("cordaCoreReleaseGroup")
+        corda_core_release_group = constants.getProperty("cordaCoreReleaseGroup")
         corda_release_version = constants.getProperty("cordaVersion")
         corda_core_release_version = constants.getProperty("cordaCoreVersion")
         corda_gradle_plugins_version = constants.getProperty("gradlePluginsVersion")
@@ -17,9 +17,19 @@ buildscript {
         log4j_version = constants.getProperty("log4jVersion")
         slf4j_version = constants.getProperty("slf4jVersion")
         corda_platform_version = constants.getProperty("platformVersion").toInteger()
+        persistence_version = constants.getProperty("persistenceVersion")
         spring_boot_version = '2.0.2.RELEASE'
         spring_boot_gradle_plugin_version = '2.0.2.RELEASE'
-    }
+
+        testJvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.nio=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.security.cert=ALL-UNNAMED', '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+                       '--add-opens', 'java.base/javax.net.ssl=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                       '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',]
+
+
+}
 
     repositories {
         mavenLocal()
@@ -35,6 +45,9 @@ buildscript {
         classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_gradle_plugin_version"
     }
+
+
+
 }
 
 task startDockerContainer {
@@ -81,7 +94,7 @@ task waitForContainerReady {
     }
 }
 
-task stopDockerContainer  {
+task stopDockerContainer {
     doLast {
         try {
             exec {
@@ -113,12 +126,13 @@ allprojects { // Properties that you need to compile your project (The applicati
 
     tasks.withType(KotlinCompile).configureEach {
         kotlinOptions {
-            languageVersion = "1.2"
-            apiVersion = "1.2"
-            jvmTarget = "1.8"
-            javaParameters = true
+            languageVersion = "1.9"
+            apiVersion = "1.9"
+            jvmTarget = "17"
+            javaParameters = true   // Useful for reflection.
         }
     }
+
 
     tasks.withType(Test) {
         if (project.hasProperty('useDockerTestnet')) {
@@ -142,25 +156,35 @@ allprojects { // Properties that you need to compile your project (The applicati
     jar {
         preserveFileTimestamps = false
         reproducibleFileOrder = true
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
 }
+cordapp {
+    targetPlatformVersion corda_platform_version
+    minimumPlatformVersion corda_platform_version
 
+}
 dependencies {
-    cordaCompile "$corda_core_release_group:corda-core:$corda_core_release_version"
-    cordaRuntime "$corda_release_group:corda-node-api:$corda_release_version"
-    cordaRuntime "$corda_release_group:corda:$corda_release_version"
+    cordaProvided ("$corda_core_release_group:corda-core:$corda_core_release_version")
 
-    cordaCompile "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
-    cordaCompile "org.apache.logging.log4j:log4j-web:${log4j_version}"
-    cordaCompile "org.slf4j:jul-to-slf4j:$slf4j_version"
+    cordaBootstrapper("$corda_release_group:corda-node-api:$corda_release_version") {
+        exclude group: "ch.qos.logback", module: "logback-classic"
+    }
+    corda "$corda_release_group:corda:$corda_release_version"
+
+
+    cordaProvided "org.apache.logging.log4j:log4j-slf4j-impl:${log4j_version}"
+    cordaProvided "org.apache.logging.log4j:log4j-web:${log4j_version}"
+    cordaProvided "org.slf4j:jul-to-slf4j:$slf4j_version"
 
     cordaDriver project(':evm-interop-common')
-    cordaDriver("org.web3j:core:$web3jVersion") { transitive = true }
+    cordaDriver("org.web3j:core:$web3jVersion")
     cordaDriver "net.corda:corda-shell:4.9"
 
     cordapp project(':evm-interop-contracts')
     cordapp project(':evm-interop-workflows')
 }
+
 
 // Task to deploy the nodes in order to bootstrap a network
 task deployNodes(type: Cordform, dependsOn: ['jar']) {
@@ -174,6 +198,7 @@ task deployNodes(type: Cordform, dependsOn: ['jar']) {
         cordapp project(':evm-interop-contracts')
         cordapp project(':evm-interop-workflows')
     }
+
     node {
         name "O=Notary,L=London,C=GB"
         notary = [validating: false]
